Added Jekyll site to allow signature retrieval

--- a/_includes/signature.html
+++ b/_includes/signature.html
@@ -12,7 +12,7 @@
 			</tr>
 			</tr>
 			<tr>
-				<td><em><a href="tel:{{ phone.replace(" ", "") }}" style="color:#BA9A57">{{ phone }}</a></em></td>
+				<td><em><a href="tel:{{ phone }}" style="color:#BA9A57">{{ phone }}</a></em></td>
 			</tr>
 			<tr>
 				<td><em><a href="https://www.btcassessors.com" target="_blank" style="color:#727272">https://www.btcassessors.com</a></em></td>
